--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@react-navigation/stack": "^5.5.1",
     "apollo-boost": "^0.4.9",
     "expo": "~37.0.3",
+    "expo-blur": "^8.1.0",
+    "expo-linear-gradient": "^8.1.0",
     "graphql": "^15.1.0",
+    "lottie-react-native": "^3.4.0",
     "react": "~16.9.0",
     "react-apollo": "^3.1.5",
     "react-dom": "~16.9.0",
