--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~37.0.3",
     "expo-blur": "^8.1.0",
     "expo-linear-gradient": "^8.1.0",
+    "firebase": "^7.15.3",
     "graphql": "^15.1.0",
     "lottie-react-native": "^3.4.0",
     "react": "~16.9.0",
